fix hamburger invisible on desktop

--- a/desktop.css
+++ b/desktop.css
@@ -34,7 +34,7 @@
   }
 
   /* Mobile menu | Hamburger */
-  #hamburger {
+  .mobile-menu {
     display: none;
   }
 
